# dolores

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: checker.rs  cmd.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs  run.rs  util.rs  vm.rs
src/interpreter/: class.rs  closure.rs  env.rs  expr.rs  jump.rs  mod.rs  object.rs  stmt.rs  tests.rs
src/parser/: expr.rs  mod.rs  pratt.rs  stmt.rs  tests.rs
src/parser/expr/: tests.rs
src/parser/stmt/: tests.rs
src/resolver/: expr.rs  stmt.rs
src/syntax/: lexer.rs  mod.rs
src/syntax/parser/: mod.rs  pratt.rs
src/syntax/parser/expr/: tests.rs
src/syntax/parser/stmt/: tests.rs
src/vm/: chunk.rs  inst.rs  tests.rs  val.rs
tests/: example.rs
