[package]
name = "dolores"
version = "0.1.0"
edition = "2021"

authors = ["Rami3L <rami3l@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.0-rc.8", features = ["cargo", "derive"] }
derive_more = "0.99.17"
itertools = "0.10.3"
logos = "0.12.0"
num_enum = "0.5.6"
parking_lot = "0.11.2"
rustyline = "9.1.1"
tap = "1.0.1"
thiserror = "1.0.30"
uuid = { version = "0.8.2", default-features = false, features = ["v4"] }

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "1.0.3"
pretty_assertions = "1.0.0"
