[package]
name = "dolores"
version = "0.1.0"
edition = "2021"

authors = ["Rami3L <rami3l@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["cargo", "derive"] }
derive_more = "0.99.17"
gc = { version = "0.4.1", features = ["derive", "gc_derive"] }
itertools = "0.10.3"
logos = "0.12.1"
rustyline = "9.1.2"
tap = "1.0.1"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "1.0.6"
pretty_assertions = "1.2.1"
